added preamble and content

--- a/main.tex
+++ b/main.tex
@@ -1,1 +1,36 @@
-\documentclass[]{.src/}
+\documentclass[thesis]{.src/hsrmreport}
+% Allgemeine Informationen des Dokuments
+% \Fachbereich{}
+% \Studiengang{}
+% \Studienrichtung{}
+\Dokumentenart{Praktikumsbericht}
+
+% Informationen für eine Ausarbeitung / Gruppenarbeit 
+\Kurs{Gerätekonstruktion}
+\Studierende{Ein Mensch mit vielen Namen}{000010}
+\Studierende{Tim-Jonas Wechler}{111111}
+
+% Informationen für einen Thesis oder Praktikumsbericht
+\Autor{Tim-Jonas Wechler}{<Mat.Nr.>}
+\Strasse{Hier-und-jetzt Straße 55}
+\PLZ{12345}
+\Wohnort{Traumschloss}
+
+\Beteiligte{Referent}{Prof. Dr. von Zuhause}
+\Beteiligte{Koreferent}{Prof. Dr. von Zuhause II}
+\Beteiligte{Betreuer}{Prof. Dr. von Zuhause III}
+
+\Unternehmen{aaa GmbH}
+
+
+
+
+\begin{document}
+    % Deckblatt
+        \Deckblatt{Test}
+        \todo{Paket https://ftp.fau.de/ctan/macros/latex/contrib/todonotes/todonotes.pdf einfügen}
+        \input{content/frontmatter/eigenstaendigkeitserklaerung.tex}
+        \input{content/frontmatter/sperrvermerk.tex}
+        \input{content/frontmatter/abstract.tex}
+
+\end{document}
