--- a/content/appendix/bibliography.tex
+++ b/content/appendix/bibliography.tex
@@ -22,15 +22,15 @@
 %     title  = {},
 %     keywords = {Kaufteile}
 
-\printbibheading
-\printbibliography[
-    keyword=Kaufteile,
-    heading=subbibliography,%
-    title={Quellen der Kaufteile},
-]
-\printbibliography[
-    notkeyword=Kaufteile,
-    heading=subbibliography,%
-    title={Quellen der Recherche},
-]
+% \printbibheading
+% \printbibliography[
+%     keyword=Kaufteile,
+%     heading=subbibliography,%
+%     title={Quellen der Kaufteile},
+% ]
+% \printbibliography[
+%     notkeyword=Kaufteile,
+%     heading=subbibliography,%
+%     title={Quellen der Recherche},
+% ]
 
