--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
         % \Fachbereich{}
         % \Studiengang{}
         % \Studienrichtung{}
-        \Dokumentenart{Praktikumsbericht}
+        \Dokumentenart{Bachelorarbeit}
 
     % Informationen für eine Ausarbeitung / Gruppenarbeit 
         \Kurs{Gerätekonstruktion}
@@ -48,19 +48,18 @@
 \begin{document}
     % Deckblatt
         \Deckblatt{Test}
-        \todo{Paket https://ftp.fau.de/ctan/macros/latex/contrib/todonotes/todonotes.pdf einfügen}
 
     % Eigenständigkeitserklärung
-        % \input{content/frontmatter/eigenstaendigkeitserklaerung.tex}
+        \input{content/frontmatter/eigenstaendigkeitserklaerung.tex}
     
     % Sperrvermerk
-        % \input{content/frontmatter/sperrvermerk.tex}
+        \input{content/frontmatter/sperrvermerk.tex}
 
     % Abstrakt    
-        % \input{content/frontmatter/abstract.tex}
+        \input{content/frontmatter/abstract.tex}
     
     % Verzeichnisse
-        % \input{content/frontmatter/glossar.tex}
+        \input{content/frontmatter/glossar.tex}
 
     % Inhaltsverzeichnis
         \begingroup		
@@ -83,7 +82,7 @@
     % Literaturverzeichnis:
     % Listet alle verwendeten Quellen auf, einschließlich 
     %       wissenschaftlicher Artikel, Bücher, Dissertationen, etc.
-        % \input{content/appendix/bibliography.tex} 
+        \input{content/appendix/bibliography.tex} 
 
     % Abbildungsverzeichnis
         % \begingroup		
