added infos to the default text.

--- a/content/frontmatter/eigenstaendigkeitserklaerung.tex
+++ b/content/frontmatter/eigenstaendigkeitserklaerung.tex
@@ -19,7 +19,7 @@ der vorstehenden Versicherungen als unrichtig erweist.
 
 \vspace{20mm}
 
-Hiermit erkläre ich mein Einverständnis mit den im Folgenden aufgeführten Verbreitungsformen dieser Bachelor-Arbeit:
+Hiermit erkläre ich mein Einverständnis mit den im Folgenden aufgeführten Verbreitungsformen \hl{dieser} \insertDokumentenart \todo[info]{Text überprüfen.}:
 
 \begin{center}
   \begin{tabular}{ | l | c | c | }
@@ -31,6 +31,7 @@ Hiermit erkläre ich mein Einverständnis mit den im Folgenden aufgeführten Ver
 	Veröffentlichung der Arbeit im Internet                               & X           &               \\
     \hline
   \end{tabular}
+  \todo[info,inline]{Inhalt der Tabelle gegebenfalls an die aktuelle Richtlinien anpassen.}
 \end{center}
 
 \vfill
