added list of todos

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 \begin{document}
     % Deckblatt
         \Deckblatt{Test}
-
+        \listoftodos
     % Eigenständigkeitserklärung
         \input{content/frontmatter/eigenstaendigkeitserklaerung.tex}
     
