--- a/content/frontmatter/eigenstaendigkeitserklaerung.tex
+++ b/content/frontmatter/eigenstaendigkeitserklaerung.tex
@@ -19,7 +19,7 @@ der vorstehenden Versicherungen als unrichtig erweist.
 
 \vspace{20mm}
 
-Hiermit erkläre ich mein Einverständnis mit den im Folgenden aufgeführten Verbreitungsformen \hl{dieser} \insertDokumentenart \todo[info]{Text überprüfen.}:
+Hiermit erkläre ich mein Einverständnis mit den im Folgenden aufgeführten Verbreitungsformen dieser \insertDokumentenart\todo[info]{Text überprüfen.}:
 
 \begin{center}
   \begin{tabular}{ | l | c | c | }
