added infos to the default text

--- a/content/frontmatter/sperrvermerk.tex
+++ b/content/frontmatter/sperrvermerk.tex
@@ -9,3 +9,4 @@ werden. Eine Vervielfältigung und Veröffentlichung der
 Dritten darf diese Arbeit nur mit der ausdrücklichen
 Genehmigung des Verfassers und des Unternehmens
 zugänglich gemacht werden.
+\todo[info,inline]{Text überprüfen, ob alles richtig geschrieben ist. Die Variablen können in der \texttt{main.tex} abgeändert werden. \\ Ebenfalls ist zu klären ob dieser Text als Sperrvermerkhinweis ausreicht.}
