--- a/main.tex
+++ b/main.tex
@@ -6,12 +6,12 @@
         \Dokumentenart{Bachelorarbeit}
 
     % Informationen für eine Ausarbeitung / Gruppenarbeit 
-        \Kurs{Gerätekonstruktion}
+        \Kurs{Die künsterlische Vielfalt}
         \Studierende{Ein Mensch mit vielen Namen}{000010}
-        \Studierende{Tim-Jonas Wechler}{111111}
+        \Studierende{Meiner Wenigkeit}{111111}
 
     % Informationen für einen Thesis oder Praktikumsbericht
-        \Autor{Tim-Jonas Wechler}{<Mat.Nr.>}
+        \Autor{Meiner Wenigkeit}{<Mat.Nr.>}
         \Strasse{Hier-und-jetzt Straße 55}
         \PLZ{12345}
         \Wohnort{Traumschloss}
@@ -20,7 +20,7 @@
         \Beteiligte{Koreferent}{Prof. Dr. von Zuhause II}
         \Beteiligte{Betreuer}{Prof. Dr. von Zuhause III}
 
-        \Unternehmen{aaa GmbH}
+        \Unternehmen{TraumJOB GmbH}
 
 
 \addbibresource{bib/bib-refs.bib}
@@ -48,7 +48,7 @@
 \begin{document}
     % Deckblatt
         \Deckblatt{Test}
-        \listoftodos
+        % \listoftodos
     % Eigenständigkeitserklärung
         \input{content/frontmatter/eigenstaendigkeitserklaerung.tex}
     
@@ -59,7 +59,7 @@
         \input{content/frontmatter/abstract.tex}
     
     % Verzeichnisse
-        \input{content/frontmatter/glossar.tex}
+        % \input{content/frontmatter/glossar.tex}
 
     % Inhaltsverzeichnis
         \begingroup		
@@ -74,10 +74,7 @@
 
     % Das Seitenlayout mit Kapitel und Unterkapitel im Header jeder Seite des Berichts
         \pagestyle{scrheadings}
-        
-        \cite{kaufteil}
-        \cite{quelle}
-        
+       
 
     % Literaturverzeichnis:
     % Listet alle verwendeten Quellen auf, einschließlich 
