--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[thesis]{.src/hsrmreport}
+\documentclass[thesis]{src/hsrmreport}
     % Allgemeine Informationen des Dokuments
         % \Fachbereich{}
         % \Studiengang{}
